# VIKTOR

./: CMakeLists.txt  README.md  alloc.c  alloc.h  engine.ini  main.c  matrix.h  test.cpp  testShaders.h  types.h  viktor.c  viktor.h
include/: alloc.h  array.h  bvh.h  matrix.h  testShaders.h  types.h  viktor.h
shaders/: colourGrade.frag  dispatchBounceRays.comp  dispatchScreenRays.comp  evalRayHits.comp  lightCull.comp  lightCullCB.comp  raytrace.comp  resolve.frag  test.frag  test.vert  test2.frag  test2.vert  test3.frag  test3.vert
src/: alloc.c  bvh.c  ray.c  test.cpp  viktor.c
